--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-hello dfd
+<!DOCTYPE html>
+<html>
+
+<head>
+    <style>
+        .header {
+
+            background-color: gray;
+            text-align: center;
+            color: rgb(1, 1, 2);
+            font-size: 25px;
+            width: 100%;
+            height: 75px;
+            padding-top: 50px;
+            margin-bottom: 5px;
+        }
+
+        .navigation{
+            background-color: gray;
+            text-align: center;
+            color: rgb(10, 10, 16);
+            font-size: 25px;
+            width: 100%;
+            height: 60px;
+            padding-top: 50px;
+            margin-bottom: 5px;
+        }
+        .footer{
+            background-color: gray;
+            text-align: center;
+            color: rgb(10, 10, 16);
+            font-size: 25px;
+            width: 100%;
+            height: 75px;
+            padding-top: 50px;
+            margin-bottom: 5px;
+        }
+
+        .main {
+            display: inline-flex;
+            width: 100%;
+        }
+
+        .content1 {
+            background-color: gray;
+            text-align: center;
+            color: black;
+            height: 300px;
+            width: 25%;
+            margin: 5px;
+            padding-top: 50px;
+        }
+
+        .mains {
+            background-color: gray;
+            color:black;
+            height: 300px;
+            width: 50%;
+            margin: 5px;
+            text-align: center;
+            padding-top: 50px;
+        }
+        .maincontent1{
+            background-color: gray;
+            text-align: center;
+            color: rgb(1, 1, 2);
+            font-size: 25px;
+            width: 100%;
+            height: 75px;
+            padding-top: 50px;
+            margin-bottom: 5px;
+        }
+
+        .content2{
+            background-color: gray;
+            color: black;
+            height: 300px;
+            width: 25%;
+            margin: 5px;
+            padding-top: 50px;
+        }
+        .content3{
+            background-color: gray;
+            text-align: center;
+            color: rgb(1, 1, 2);
+            font-size: 25px;
+            width: 100%;
+            height: 75px;
+            padding-top: 50px;
+            margin-bottom: 5px;
+        }
+
+        .contents{
+            background-color: gray;
+            text-align: center;
+            color: rgb(1, 1, 2);
+            font-size: 25px;
+            width: 100%;
+            height: 75px;
+            padding-top: 50px;
+            margin-bottom: 5px;
+        }
+    </style>
+</head>
+
+<body>
+    <p class="header">Header</p>
+    <P class="navigation">Navigation</P>
+    <div class="main">
+        <div class="content1">
+            <p class="contents">CONTENT</p>
+        </div>
+        <div class="mains">
+            <p class="maincontent1">MAIN CONTENT</p>
+        </div>
+        <div class="content2">
+            <p class="content3">CONTENT</p>
+        </div>
+    </div>
+    <p class="footer">FOOTER</p>
+</body>
+
+</html>
